--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-06-25
+% \update      2016-06-26
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.9.14}
+\title{Sequencer64 User Manual 0.9.15}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -78,7 +78,7 @@
 \label{sec:introduction}
 
    This document describes how to use \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.9.14,
+   \cite{sequencer64}, through version 0.9.15,
    using the latest commit from the \textbf{fixups} branch.
    If you're impatient to get started mastering \textsl{Sequencer64},
    proceed to \sectionref{subsec:introduction_lets_get_started}.
@@ -247,6 +247,9 @@
          the file into tracks based on channel number.  Each track becomes one
          sequence/pattern in the main window grid.
       \item The chord-generation feature of \textsl{Stazed}'s \textsl{Seq32}
+         project has been ported into \textsl{Sequencer64}.  It can be
+         disabled at configure/build time, if desired.
+      \item The pattern-transposing feature of \textsl{Stazed}'s \textsl{Seq32}
          project has been ported into \textsl{Sequencer64}.  It can be
          disabled at configure/build time, if desired.
       \item One can optionally bring up two song editor windows, to have a view
