--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-06-26
+% \update      2016-06-27
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -496,13 +496,13 @@
 \input{seq64_midi_formats}
 
 % Discussion of JACK support
-
-\input{seq64_jack}
+%
+% \input{seq64_jack}
 
 % Detailed discussion of how internal variables alter the appearance
 % of Sequencer64.
-
-\input{seq64_metrics}
+%
+% \input{seq64_metrics}
 
 \section{Summary}
 \label{sec:summary}
