--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-06-27
+% \update      2016-08-30
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.9.15}
+\title{Sequencer64 User Manual 0.9.17}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -58,7 +58,7 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{Sequencer64-0_9_14.png}
+   \includegraphics[scale=0.50]{Sequencer64-0_9_17.png}
 \end{figure}
 
 \clearpage                             % moves Contents to next page
@@ -78,22 +78,21 @@
 \label{sec:introduction}
 
    This document describes how to use \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.9.15,
-   using the latest commit from the \textbf{fixups} branch.
-   If you're impatient to get started mastering \textsl{Sequencer64},
-   proceed to \sectionref{subsec:introduction_lets_get_started}.
-   Otherwise, here are some of the improvements made.
+   \cite{sequencer64}, through version 0.9.17,
+   using the latest commit from the
+   \textbf{master} and \textbf{fixups} branches.
+   If one is impatient to get started mastering \textsl{Sequencer64},
+   then proceed to \sectionref{subsec:introduction_lets_get_started}.
 
-   We fixed some bugs in JACK support, MIDI clocking, and
-   JACK Master mode (with code from the \textsl{SooperLooper} project).
-%  This code allows the \textsl{klick} metronome application to be driven by
-%  \textsl{Sequencer64}.
+   \textsl{Sequencer64} fixes some bugs in JACK support, MIDI clocking, and
+   JACK Master mode (with code from the \textsl{SooperLooper} 
+   and \textsl{Seq32} projects).
    So, overall, JACK and clocking are improved over \textsl{Seq24}.
    However, as user \textsl{stazed} notes on GitHub, there is more that can be
    done (and he has done much with his \textsl{seq32} \cite{seq32} project).
 
    We've added a few features to make song editing more
-   convenient for those who use ALSA for basic work.
+   convenient.
    There is now a Pause button and a configuration Pause
    keystroke, which defaults to a period (".").
    Much more editing can be done using keystrokes.
@@ -104,37 +103,8 @@
    We've got zoom keys for the editors, current-sequence highlighting,
    a raft of important bug fixes, some optimization, and much more.
 
-   In the future, we hope to make a command-line/headless version of
-   \textsl{Sequencer}, an LV2 plugin to run it in modern DAW applications,
-   and a scripting language and plugin support for it.
-
-   Before we continue, we have contributors to acknowledge:
-
-   \begin{itemize}
-      \item \textsl{Tim Deagan (tdeagan)}:
-         fixes to the mute-group support.
-      \item \textsl{0rel}:
-         an important fix to properly add and relink notes after a
-         paste action in the pattern editor.
-      \item \textsl{Stan Preston (stazed)}:
-         ideas for some upcoming improvements based
-         on his \textsl{seq32} project.
-   \end{itemize}
-
-   Also some bug-reporters and testers:
-
-   \begin{itemize}
-      \item \textsl{gimmeapill}:
-         testing, bug-reports, and, um, "marketing".
-      \item \textsl{muranyia}:
-         feature request for numbered piano keys and bug-reports.
-      \item \textsl{F0rth}:
-         a request for scripting support, a possible future feature.
-      \item \textsl{triss}:
-         a request for OSC support, a possible future feature.
-      \item \textsl{ssj71}:
-         a request for an LV2 plugin version, a possible future feature.
-   \end{itemize}
+   We have contributors to acknowledge.  Please see
+   \sectionref{sec:kudos}.
 
 \subsection{Sequencer64: What?}
 \label{subsec:what_is_sequencer64}
@@ -144,16 +114,14 @@
    than the typical software MIDI sequencer.
    \textsl{Sequencer64} has many updates and improvements, and a modestly
    new look, so that a new manual is a necessity.
-   We lengthened the name because \textsl{Seq64} is actually a sequencer
-   project for the N64 game system.
 
    \textsl{Seq24} was, a few years back, a very active project, with a
    number of contributors, who have created patches, additional
    functionality, and even ports to Windows.
-   We searched assiduously for all of these updates, and
-   incorporated them into \textsl{Sequencer64} where feasible.
+   We searched assiduously for these updates, and
+   incorporated most of them into \textsl{Sequencer64} where feasible.
    There are still some things to be done, including a port to
-   Windows/Portmidi (but that is a low priority).
+   Windows/Portmidi.
 
    \textsl{Sequencer64} is not a synthesizer.  It requires a hardware
    synthesizer, or a software synthesizer such as Timidity \cite{timidity},
@@ -170,21 +138,10 @@
    With \textsl{Sequencer64}, one creates several patterns, and then
    combines them.
 
-   There are a number of authors of \textsl{Seq24}, and currently only
-   one primary author of \textsl{Sequencer64} (with some contributions and
-   ideas from other \textsl{Seq24} fans),
-   as one can see in \figureref{fig:seq64_menu_help_credits},
-   and in \figureref{fig:seq64_menu_help_doc}.
-   All of these authors, and more, have contributed to \textsl{Sequencer64},
-   whether they know it or not.
-   The original author is Rob C. Buse; where the word "I" occurs, that is
-   probably him.  Without his work, we would never have started
-   \textsl{Sequencer64}.
-
-   Now, unfortunately, \textsl{Seq24} spent some time not under active
-   development (2010 seems to be the last major update, though there was a
+   Now, unfortunately, \textsl{Seq24} spent some time in limbo
+   (2010 was the last major update, with a
    recent update to fix a MIDI clock issue).  There are a number of
-   minor forks for it on \textsl{GitHub}, and some conversions
+   forks for it on \textsl{GitHub}, and some conversions
    to code in other languages, and some patches.
    There is also a fairly extensive port to Windows.
    So, why would we bother creating yet another fork of \textsl{Seq24}?
@@ -203,33 +160,8 @@
    for the "user" configuration file, and a way to edit parts of the MIDI file
    textually.
 
-   From the original author:
-
-   \begin{quotation}
-      \textsl{Seq24} is a real-time MIDI sequencer. It was created to
-      provide a very simple interface for editing and playing MIDI 'loops'.
-      After searching for a software based sequencer that would provide the
-      functionality needed for a live performance, there was little found in
-      the software realm. I set out to create a very minimal sequencer that
-      excludes the bloated features of the large software sequencers, and
-      includes a small subset of features that I have found usable in
-      performing. 
-
-      Written by Rob C. Buse.  I wrote this program to fill a
-      hole.  I figure it would be a waste if I was the only one
-      using it.  So, I released it under the GPL.
-   \end{quotation}
-
-   This project deserves to stay alive!
-   (And it is alive!  A new version, 0.9.3, has come out from the LaunchPad
-   group!  It corrects a problem with MIDI Clock drift).
-   Taking advantage of Rob's generosity,
-   we've created a reboot, a refactoring, an improvement (we hope) of
-   \textsl{Seq24}.  It preserves (we hope) the lean nature of \textsl{Seq24},
-   while adding a few features we've found useful, to make it the
-   \index{vi} "vi of sequencers".
-   
-   Always remember that, without \textsl{Seq24} and its authors,
+   We view \textsl{Seq24} as a kind of "vi" of MIDI editing... spare, lean, and
+   powerful.  Without \textsl{Seq24} and its authors,
    \textsl{Sequencer64} would never have come into being.
 
 \subsection{Improvements}
@@ -240,18 +172,28 @@
 
    \begin{itemize}
       \item A new \textsl{event editor} dialog was added.
-         It allows for the viewing and editing of MIDI events.
-         The user is able to see all types of events in the sequence at
-         once.  This editor is still a work-in-progress, but useful.
-      \item \textsl{Sequencer64} can now read SMF 0 MIDI files.  It splits
+         It detailed viewing and editing of MIDI events.
+         This editor is basic, but useful.
+      \item \textsl{Sequencer64} reads SMF 0 MIDI files.  It splits
          the file into tracks based on channel number.  Each track becomes one
          sequence/pattern in the main window grid.
-      \item The chord-generation feature of \textsl{Stazed}'s \textsl{Seq32}
-         project has been ported into \textsl{Sequencer64}.  It can be
-         disabled at configure/build time, if desired.
-      \item The pattern-transposing feature of \textsl{Stazed}'s \textsl{Seq32}
-         project has been ported into \textsl{Sequencer64}.  It can be
-         disabled at configure/build time, if desired.
+      \item Features from \textsl{Stazed}'s \textsl{Seq32} \cite{seq32} project.
+         Some features can be disabled at configure/build time, if desired.
+      \begin{itemize}
+         \item The chord-generation of \textsl{Seq32}
+            has been ported into \textsl{Sequencer64}.
+         \item The pattern-transposing feature
+            has been ported into \textsl{Sequencer64}.
+         \item MIDI song export has been ported to \textsl{Sequencer64}.
+            It allows a song/performance to be exported into a MIDI file
+            without \textsl{Sequencer64} loops, so that the performance can be
+            played in a standard MIDI sequencer.
+         \item The extended undo/redo support of \textsl{Seq32} has been
+            ported to \textsl{Sequencer64}.
+         \item A large number of other \textsl{Seq32} features have been
+            ported, but they are currently commented out until we can test them
+            and make sure they are "perfect".
+      \end{itemize}
       \item One can optionally bring up two song editor windows, to have a view
          of two different parts of a large song while arranging it.
       \item The Set Tempo and Time Signature events of normal MIDI files are
@@ -314,11 +256,14 @@
             grids.
          \item Additional zoom values have been added to support the display
             of high PPQN sequences.
+         \item An "inverse" or "night" color mode has been added for those
+            who find the glare of all-white windows to be uncomfortable.
       \end{itemize}
       \item Consolidated various patches in forks of the \textsl{Seq24}
          project found by searching the web.  Fixes to bugs found while
          refactoring \textsl{Seq24} were also made.  These fixes are noted in
-         detail in the project's ROADMAP file.
+         detail in the project's ROADMAP and contrib/notes/bugs-to-investigate
+         files.
       \item More musical scales (harmonic minor, melodic minor,
          whole tone, etc.) have been added.
       \item A pause feature has been added to ALSA-mode playback.  It works
@@ -422,8 +367,8 @@
 
 \begin{figure}[H]
    \centering 
-%  \includegraphics[scale=0.75]{seq64-first-screen.png}
-   \includegraphics[scale=0.75]{new/seq64_first_screen.png}
+   \includegraphics[scale=0.75]{seq64-first-screen.png}
+%  \includegraphics[scale=0.75]{new/seq64_first_screen.png}
    \caption{Sequencer64 Main Screen}
    \label{fig:seq64_main_screen}
 \end{figure}
@@ -431,9 +376,10 @@
    Then the \textsl{Sequencer64} main window appears, as shown in
    \figureref{fig:seq64_main_screen}.  It has some differences
    from the \textsl{Seq24} main window: the highlighting of
-   empty patterns in yellow, a different font, and colored and numbered pattern
-   slots.  All of these items can be configured either at build time or at run
-   time (via the "user" configuration file).
+   empty patterns in yellow, a different font, and much more that is not shown.
+   All of these items can be configured either at build time or at run
+   time (via the "rc" and "user" configuration files or via command-line
+   options).
 
    \textbf{Tip:}
    \index{tips!tooltips}
@@ -446,10 +392,6 @@
 % name with ".tex" appended.
 
 \rhead{\rightmark}         % shows section number and section name
-
-% Important Concepts
-
-\input{seq64_concepts}
 
 % Menu
 
@@ -487,6 +429,10 @@
 
 \input{seq64_manpage}
 
+% Important Concepts
+
+\input{seq64_concepts}
+
 % Building and debugging Sequencer64
 
 \input{seq64_build}
@@ -494,6 +440,10 @@
 % Discussion of MIDI formats related to Seq24 and Sequencer64
 
 \input{seq64_midi_formats}
+
+% Acknowledgments
+
+\input{seq64_kudos}
 
 % Discussion of JACK support
 %
@@ -511,7 +461,8 @@
 
    Contact: If you have ideas about \textsl{Sequencer64} or a bug report, please
    email us (at \url{mailto:ahlstromcj@gmail.com}).
-   If it's a bug report, please add \textbf{[BUG]} to the Subject.
+   If it's a bug report, please add \textbf{[BUG]} to the Subject, or use the
+   GitHub bug-reporting interface.
 
 % References
 
